2000-06-06  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* gdbtk.c: Remove CYGWIN32 conditional around timer machinery.
  	Cygwin can handle timers fine now.	

2000-04-17  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* ChangeLog-gdbtk: Renamed to ChangeLog
	* ChangeLog: New file
	* gdbtk-cmds.c, gdbtk-hooks.c, gdbtk-variable.c, gdbtk-varobj.c,
	gdbtk-wrapper.h, gdbtk-wrapper.c, gdbtk.h, gdbtk.c: No need for
	changelog-default-name hint for Emacs now

2000-04-14  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* gdbtk.c (gdbtk_init): For now, reset gdb_stdtarg to gdb_stdout
	when using gdbtk.

2000-04-01  Jim Blandy  <jimb@redhat.com>

	* gdbtk-hooks.c (gdbtk_restore_result_ptr): New function.
	* gdbtk.h (gdbtk_restore_result_ptr): Declare it.
	* gdbtk-cmds.c (gdbtk_load_asm): Use it to restore the old value
	of result_ptr, in case we get errors while disassembling things.

2000-03-28  Jim Blandy  <jimb@redhat.com>

	Handle the fact that there are holes in the register numbering.
	* gdbtk-cmds.c (gdb_regnames): If given the -numbers option,
	return the register numbers along with their names.
 	(get_register_name): Record both the register name and number, if
 	requested.

2000-03-13  James Ingham  <jingham@leda.cygnus.com>

	* gdbtk-varobj.c (variable_create): Pass the correct
	"how_specified" flag to the varobj_create routine.

2000-02-29  James Ingham  <jingham@leda.cygnus.com>

	* gdbtk-cmds.c (gdb_disassemble_driver): The to_shortname for
	Linux is "linuxthreads", not "linux-threads", so we have to change 
	the heuristic to account for this.  This fixes a crash when trying 
	to disassemble from shared libraries.

2000-02-23  Keith R Seitz  <kseitz@nwlink.com>

	* gdbtk-wrapper.h: Add declarations for GDB_get_prev_frame, GDB_get_next_frame,
	GDB_find_relative_frame, GDB_get_current_frame.
	* gdbtk-wrapper.c (GDB_get_prev_frame, wrap_get_prev_frame): New functions.
	(GDB_get_next_frame, wrap_get_next_frame): New functions.